--- a/src/Spark.Tests/Spark.Tests.csproj
+++ b/src/Spark.Tests/Spark.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Caching\CacheSignalTester.cs" />
     <Compile Include="Caching\CacheUtilitiesTester.cs" />
     <Compile Include="Caching\TextWriterOriginatorTester.cs" />
+    <Compile Include="Compiler\OxygeneViewCompilerTester.cs" />
     <Compile Include="Compiler\SourceWriterTester.cs" />
     <Compile Include="Compiler\VisualBasicViewCompilerTester.cs" />
     <Compile Include="Compiler\ExpressionBuilderTester.cs" />
