--- a/src/Spark/Spark.csproj
+++ b/src/Spark/Spark.csproj
@@ -77,12 +77,22 @@
     <Compile Include="Caching\TextWriterOriginator.cs" />
     <Compile Include="Compiler\NodeVisitors\CacheAttributeVisitor.cs" />
     <Compile Include="Compiler\NodeVisitors\SpecialAttributeVisitorBase.cs" />
+    <Compile Include="Compiler\Oxygene\ChunkVisitors\BaseClassVisitor.cs" />
+    <Compile Include="Compiler\Oxygene\ChunkVisitors\FileReferenceVisitor.cs" />
+    <Compile Include="Compiler\Oxygene\ChunkVisitors\GeneratedCodeVisitor.cs" />
+    <Compile Include="Compiler\Oxygene\ChunkVisitors\GlobalMembersImplementationVisitor.cs" />
+    <Compile Include="Compiler\Oxygene\ChunkVisitors\GlobalMembersVisitor.cs" />
+    <Compile Include="Compiler\Oxygene\ChunkVisitors\UsingNamespaceVisitor.cs" />
+    <Compile Include="Compiler\Oxygene\OxygeneViewCompiler.cs" />
     <Compile Include="CompositeViewEntry.cs" />
     <Compile Include="AbstractSparkView.cs" />
     <Compile Include="ICacheService.cs" />
     <Compile Include="ICacheSignal.cs" />
     <Compile Include="NullCacheService.cs" />
     <Compile Include="Compiler\NodeVisitors\BindingExpansionVisitor.cs" />
+    <Compile Include="Parser\Code\OxygeneCodeGrammar.cs" />
+    <Compile Include="Parser\Markup\OxygeneMarkupGrammar.cs" />
+    <Compile Include="Parser\Syntax\OxygeneSyntaxProvider.cs" />
     <Compile Include="SparkViewBase.cs" />
     <Compile Include="CompiledViewEntry.cs" />
     <Compile Include="CompiledViewHolder.cs" />
